# gorbe-bogre

./: CMakeLists.txt  README.md  main.cpp  main.h
